# mcpservers

./: LAUNCH__session_id__AIStudioTestsNEnhancements_2512021118.sh  README.md  _env.sh  package-lock.json
.github/workflows/: claude.yml  python.yml  release.yml  typescript.yml
__llms/: AI_STUDIO_AUTOMATION_ARCHITECTURE.md  aistudio_mcp_tools.py  llms-aistudio-00-DOCUMENTATION_UPDATE_2025-11-05.md  llms-aistudio-00-START-HERE.md  llms-aistudio-02-workflow-existing-project.md  llms-aistudio-07-mcp-server-setup.md  llms-aistudio-collaboration.md  llms-jupyter-book-creation-guide.gemini.md  llms-rise-framework.txt  llms-storyteller-indigenous-audiences.txt
src/aistudio/: Makefile  README.md  aistudio_mcp_server.py  pyproject.toml  release.sh
src/aistudio/docs/: 01-workflow-new-project.md  03-ai-features-catalog.md  04-browser-automation-reference.md  05-llm-decision-guide.md  06-best-practices-antipatterns.md  08-mcp-quick-reference.md  legacy-ai-features-exploration.md  legacy-workflow-new-project.md
src/aistudio/samples/goal-tracker-aistudio-251211/: GEMINI_PROMPT_V1.md  MCP_CONFIG.json  WORKFLOW.md  goal-tracker.spec.md  prompt.txt
src/aistudio/src/mcp_server_aistudio/: __init__.py  __main__.py  automation.py  cli.py  config.py  server.py  setup.py
src/filesystem/: README.md  index.ts  package.json
src/v0deployer/: LICENSE  README.md  pyproject.toml  v0deployer_mcp_server.py
src/v0deployer/docs/: deployment-workflow.md
src/v0deployer/src/mcp_server_v0deployer/: __init__.py  __main__.py  automation.py  config.py  server.py
