[project]
name = "mcp-server-aistudio"
version = "0.1.0"
description = "A Model Context Protocol server for Google AI Studio automation with Playwright, providing tools, resources, and prompts for end-to-end development workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "jgwill" }]
keywords = ["aistudio", "google", "gemini", "mcp", "playwright", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
mcp-server-aistudio = "mcp_server_aistudio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
